Updated README for more details; changed Android injection files to use original icons of LÖVE; Changed default values of build.gradle; Removed several empty lines on Android injection files

--- a/inject/android/app/build.gradle
+++ b/inject/android/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.ricle.happysquirrel"
+        applicationId "org.example.newgame"
         versionCode 1
         versionName "0.1.0"
         minSdkVersion 14
